--- a/ChangeLog
+++ b/ChangeLog
@@ -8131,7 +8131,7 @@
 	possible).
 	* alloc.c (GC_gcollect): Use GC_default_stop_func.
 	* alloc.c (GC_collect_or_expand): Use GC_default_stop_func
-	(instead of GC_never_stop_func) unless it is trigged due to out of
+	(instead of GC_never_stop_func) unless it is triggered due to out of
 	memory; don't increment GC_fail_count and don't output warning
 	(before trying to collect again) in case the collection has been
 	interrupted (by GC_default_stop_func) and the heap expansion has
@@ -10179,7 +10179,7 @@
 2008-02-20  Hans Boehm <Hans.Boehm@hp.com>
 
 	* allchblk.c (add_to_fl): disable assertions with USE_MUNMAP,
-	and refine assertions to handle huge unmergable blocks.
+	and refine assertions to handle huge unmergeable blocks.
 	(GC_allochblk_nth): Add comment.
 
 2008-02-20  Hans Boehm <Hans.Boehm@hp.com>
