Update AUTHORS file (add Dimitris Apostolou)

--- a/AUTHORS
+++ b/AUTHORS
@@ -135,6 +135,7 @@ Demyan Kimitsa <demyan.kimitsa@gmail.com>
 Dick Porter <dick@acm.org>
 Dietmar Planitzer <dave.pl@ping.at>
 Dima Pasechnik <dimpase@gmail.com>
+Dimitris Apostolou <dimitris.apostolou@icloud.com>
 Dimitris Vyzovitis <vyzo@media.mit.edu>
 Dimitry Andric <dim@freebsd.org>
 Djamel Magri <djamel.magri@googlemail.com>
