Update AUTHORS file (add Ilya Kurdyukov)

--- a/AUTHORS
+++ b/AUTHORS
@@ -188,6 +188,7 @@ Iain Sandoe <developer@sandoe-acoustics.co.uk>
 Ian Piumarta <piumarta@prof.inria.fr>
 Ian Searle <ians@eskimo.com>
 Igor Khavkine <i_khavki@alcor.concordia.ca>
+Ilya Kurdyukov <ilyakurdyukov@altlinux.org>
 Ivan Demakov <ivan@tgrad.nsk.su>
 Ivan Maidanski <ivmai@mail.ru>
 Ivan R <iarspider@gmail.com>
