--- a/ChangeLog
+++ b/ChangeLog
@@ -13,7 +13,7 @@
 * Do not put atomic_ops[_sysdeps].o to libgc.a in Makefile.direct
 * Do not treat warnings as errors by default in digimars.mak
 * Enable without_libatomic_ops for targets requiring atomic_ops.c (CMake)
-* Fail threadkey_test on pthread_create error in main loop
+* Fail threadkeytest on pthread_create error in main loop
 * Fix digimars.mak to build 'all' by default
 * Make all functions static in msvc_dbg.c except for backtrace[_symbols]
 * Mention CMake-based build in README.md and README.QUICK
@@ -25,7 +25,7 @@
 * Print iteration number on thread creation or join failure in tests
 * Print thread number on marker thread creation failure
 * Put gc_badalc/cpp.cpp instead of .cc ones in CMake script (MSVC/BCC/WCC)
-* Relax required dependencies for test_atomic_ops (CMake)
+* Relax required dependencies for atomicopstest (CMake)
 * Remove GC_copyright symbol
 * Remove IF_IA64 macro in pthread_stop_world (refactoring)
 * Remove Symbian makefile
@@ -38,7 +38,7 @@
 * State explicitly that license is MIT-style
 * Support CFLAGS_EXTRA in rare build scripts (NT/WCC_MAKEFILE, digimars.mak)
 * Try find libatomic_ops installed by cmake if with_libatomic_ops (CMake)
-* Use GC_printf in test_cpp consistently (refactoring)
+* Use GC_printf in cpptest consistently (refactoring)
 
 
 == [8.2.2] (not released yet) ==
