--- a/ChangeLog
+++ b/ChangeLog
@@ -557,6 +557,9 @@ Also, includes 7.4.4 changes
 == [7.4.22] (not released yet) ==
 
 * Eliminate 'new_l may be used uninitialized' gcc warning in os_dep (Cygwin)
+* Fix 'undeclared getpagesize' compiler warning on AIX and OSF1
+* Fix stack overflow in gctest on Alpine Linux/s390x
+* Workaround crash in FreeBSD rand() by avoiding its concurrent usage
 
 Also, includes 7.2p changes.
 
@@ -1089,8 +1092,12 @@ Also, includes 7.2 changes
 
 == [7.2p] (not released yet) ==
 
-* Fix a typo in debugging.html
+* Fix get_maps failure when GC_repeat_read returns zero
+* Fix missing lock when GC_generate_random_valid_address is called
 * Fix nodist_libgc_la_SOURCES value in Makefile.am for Solaris/sparc
+* Fix oldProc initialization in gc_cleanup and eliminate related warnings
+* Fix parallel_initialized assertion violation in initsecondarythread (Win32)
+* Fix typos in debugging.html, in comments of allchblk.c, finalize.c, gc.h
 * Refer to Makefile.direct instead of deleted Makefile file in README
 * Remove checking of RS6000 completely
 * Remove non-working check of M68K in gctest
