--- a/ChangeLog
+++ b/ChangeLog
@@ -257,19 +257,36 @@
 
 * Distribute gc_disclaim.h in single-obj-compilation
 * Do not name GCC intrinsics as C11 ones
+* Eliminate 'buffer overflow detected' FP error in realloc_test
 * Eliminate 'function/data pointer conversion in expression' MSVC warning
 * Eliminate 'new_l may be used uninitialized' gcc warning in os_dep (Cygwin)
+* Eliminate 'old_gc_no is initialized but not referenced' MS VC false warning
+* Eliminate 'value exceeds maximum object size' gcc warning in debug_malloc
+* Eliminate 'value exceeds maximum object size' gcc warnings in huge_test
+* Eliminate 'writing into region of size 0' gcc FP warning in realloc
+* Eliminate stringop-overflow gcc-12 warning in CORD__next
 * Fix 'GC_greatest_stack_base_below is defined but not used' warning (IA64)
+* Fix 'GC_text_mapping not used' GCC warning if redirect malloc w/o threads
 * Fix 'ISO C forbids conversion of function pointer to object' warning
+* Fix 'undeclared getpagesize' compiler warning on AIX and OSF1
 * Fix GC_allocate_ml incorrect cleanup in GC_deinit if pthreads (MinGW)
-* Fix a typo in debugging.md
+* Fix GC_unmapped_bytes update in GC_unmap for Sony PS/3
+* Fix get_maps failure when GC_repeat_read returns zero
+* Fix hang in GC_free if GC_PREFER_MPROTECT_VDB (Mingw64)
 * Fix lock assertion violation in GC_find_limit if always multi-threaded
+* Fix missing lock when GC_generate_random_valid_address is called
 * Fix nodist_libgc_la_SOURCES value in Makefile.am for Solaris/sparc
+* Fix oldProc initialization in gc_cleanup and eliminate related warnings
+* Fix parallel_initialized assertion violation in initsecondarythread (Win32)
+* Fix stack overflow in gctest on Alpine Linux/s390x
+* Fix typos in debugging.md, in comments of allchblk.c, finalize.c, gc.h
+* Fix undefined __stack_base__ on UWP/arm64 (llvm-mingw)
 * Refer to Makefile.direct instead of deleted Makefile file in README
 * Remove checking of RS6000 completely
 * Remove non-working check of M68K in gctest
 * Revert addition of msvc_dbg.h in include.am
 * Workaround Thread Sanitizer (TSan) FP warning in is_valid_displacement
+* Workaround crash in FreeBSD rand() by avoiding its concurrent usage (tests)
 
 
 == [8.0.6] 2021-09-28 ==
