--- a/ChangeLog
+++ b/ChangeLog
@@ -6,32 +6,65 @@
 * Allow not to bypass pthread_cancel hardening in pthread_start
 * Distribute gc_gcj.h and some other headers in single-obj-compilation
 * Do not call SET_HDR() to remove forwarding counts if none exists in hblk
+* Do not call mprotect/mmap to GC_unmap/remap (Linux)
+* Do not count unmapped regions if GC_unmap is madvise-based (Linux)
 * Do not fail tests if pthread_create returns resource unavailable error
 * Do not name GCC intrinsics as C11 ones
+* Do not probe to find main data root start if dl_iterate_phdr exists
+* Eliminate '-pedantic is not option that controls warnings' GCC-6.3 message
 * Eliminate '/GS can not protect parameters' MS VC warning in msvc_dbg
+* Eliminate 'buffer overflow detected' FP error in realloc_test
 * Eliminate 'function/data pointer conversion in expression' MSVC warning
+* Eliminate 'layout of aggregates has changed in GCC 5' warning in test_cpp
 * Eliminate 'new_l may be used uninitialized' gcc warning in os_dep (Cygwin)
+* Eliminate 'old_gc_no is initialized but not referenced' MS VC false warning
 * Eliminate 'potentially uninitialized local variable tc' warning (MSVC)
 * Eliminate 'skipping config since MAX_HEAP_SECTS is unknown' cppcheck FP
+* Eliminate 'value exceeds maximum object size' gcc warning in debug_malloc
+* Eliminate 'value exceeds maximum object size' gcc warnings in huge_test
+* Eliminate 'writing into region of size 0' gcc FP warning in realloc
+* Eliminate code defect about incorrect size of allocated object (leaktest)
+* Eliminate division-by-zero FP warning in GC_ASSERT in reclaim_block
+* Eliminate stringop-overflow gcc-12 warning in CORD__next
 * Fix 'GC_greatest_stack_base_below is defined but not used' warning (IA64)
+* Fix 'GC_text_mapping not used' GCC warning if redirect malloc w/o threads
 * Fix 'ISO C forbids conversion of function pointer to object' warning
+* Fix 'undeclared getpagesize' compiler warning on AIX and OSF1
 * Fix 'unresolved __imp__wsprintfA' linker error in msvc_dbg.c (MSVC)
 * Fix 'unresolved symbol GetModuleHandle' error in win32_threads.c (UWP)
+* Fix (workaround) stack overflow in gctest on Alpine Linux/s390x
 * Fix GC_allocate_ml incorrect cleanup in GC_deinit if pthreads (MinGW)
-* Fix a typo in debugging.md
+* Fix GC_unmapped_bytes update in GC_unmap for Sony PS/3
+* Fix abort when GC_repeat_read returns zero
+* Fix hang in GC_free if GC_PREFER_MPROTECT_VDB (Mingw64)
 * Fix lock assertion violation in GC_find_limit if always multi-threaded
+* Fix memory return to OS in GC_unmap
+* Fix missing lock when GC_generate_random_valid_address is called
 * Fix missing write() declaration if CONSOLE_LOG (Watcom)
 * Fix nodist_libgc_la_SOURCES value in Makefile.am for Solaris/sparc
+* Fix oldProc initialization in gc_cleanup and eliminate related warnings
+* Fix parallel_initialized assertion violation in initsecondarythread (Win32)
+* Fix typos in comments and debugging.md
+* Fix undefined __stack_base__ on UWP/arm64 (llvm-mingw)
+* Move platform-specific sleep call to GC_usleep (refactoring)
 * Refer to Makefile.direct instead of deleted Makefile file in README
+* Relax assertion of hb_n_marks in reclaim_block if more than two markers
+* Remove IF_IA64 macro in pthread_stop_world (refactoring)
 * Remove checking of RS6000 completely
 * Remove duplicate include gc_tiny_fl.h in gc_priv.h
 * Remove non-working check of M68K in gctest
+* Replace RAISE_SIGNAL macro with a static function (refactoring)
+* Retry pthread_kill if EAGAIN (Linux)
 * Revert addition of msvc_dbg.h in include.am
+* Start configure help messages with a lower case letter
 * Support GCC MCF thread model (mcfgthreads) in configure (MinGW)
 * Support OpenBSD/riscv64
+* Support space-separated flags in CFLAGS_EXTRA passed to CMake
 * Update README.win32 about default build configuration (configure, cmake)
 * Workaround 'info is not assigned' cppcheck FP if assertions on (OS X)
 * Workaround Thread Sanitizer (TSan) FP warning in is_valid_displacement
+* Workaround crash in FreeBSD rand() by avoiding its concurrent usage
+* Workaround gctest hang if test compiled as C++ code by MSVC (CMake)
 * Workaround msvc_dbg.c build failure on arm[64] (MSVC)
 
 
