Update ChangeLog file

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,43 +2,96 @@
 == [8.3.0] (development) ==
 
 * Add 'lib' prefix to build artifact names in Makefile.direct
+* Add I_HOLD_LOCK assertion to scratch_alloc/recycle and their callers
+* Add assertion to ensure GC_unmapped_bytes cannot underflow
 * Add check-deps goal to Makefiles to build the tests but not execute them
+* Add missing undef GC_NO_THREAD_REDIRECTS in threaded tests
+* Adjust comments in block_unmap_inner
+* Adjust printing on amount of unmapped memory after GC
+* Allow disable USE_PROC_FOR_LIBRARIES even if malloc is redirected on Linux
+* Allow mprotect-based incremental GC on AIX and for all Linux targets
+* Allow testing of retry-signals functionality
 * Allow to build with forced WRAP_MARK_SOME
+* Allow to skip heap expansion in GC_init
+* Allow to unmap memory block right in GC cycle where block is freed
+* Always set only one bit past end in GC_set_hdr_marks
 * Assert SET_HDR does not write to GC_all_nils
+* Avoid unmap of memory allocated during GC init regardless of threshold
+* Better document GC_generate_random_heap/valid_address API functions
 * Build extra/gc.c in digimars.mak
+* Change minimum heap growth to one block if requested explicitly
 * Change p local variable to current_p in push_all/conditional_eager
+* Check pointer tag in all mark procedures (E2K)
+* Declare GC_register_stackbottom symbol as internal on IA64 (refactoring)
+* Define GC_save_regs_ret_val variable only if used on IA64 (refactoring)
 * Define marker_[b]sp only if needed (refactoring)
+* Disable H/W tag checking in mark procedures by default (E2K)
+* Disable memory unmapping explicitly in gcconfig.h for Emscripten
+* Discard sections with pseudo-paths except heap in register_map_entries
 * Do not compile pthread_start.c on Cygwin even if build shared libs (CMake)
 * Do not compile pthread_stop_world.c on Darwin (CMake)
 * Do not put atomic_ops[_sysdeps].o to libgc.a in Makefile.direct
 * Do not treat warnings as errors by default in digimars.mak
+* Document argument of GC_is_marked in gc_mark.h
+* Eliminate 'checking if 1U<<12 is less than zero' cppcheck FP warning
+* Eliminate 'n obtained from untrusted source' code defect FP in test_cpp
+* Enable prefetch loop in GC_mark_from on E2K
 * Enable without_libatomic_ops for targets requiring atomic_ops.c (CMake)
+* Ensure GC_n_set_marks() does not count extra bits in hb_marks
+* Ensure a collection occurs between adjacent heap expansions
+* Ensure every test prints a message on success
 * Fail threadkeytest on pthread_create error in main loop
 * Fix digimars.mak to build 'all' by default
+* Group NEED_FIND_LIMIT definitions in gcconfig.h (refactoring)
+* Increase number of iterations in leak and middle tests
+* Make abort message unique in write_fault_handler
 * Make all functions static in msvc_dbg.c except for backtrace[_symbols]
 * Mention CMake-based build in README.md and README.QUICK
 * Move non-cord [pkg]include_HEADERS assignments to include.am (refactoring)
 * Move non-license info from LICENSE file to README and vice versa
 * Move public header files to include/gc in source tree
+* Name all tests consistently (refactoring)
 * New CMake option to link with external libatomic_ops (system library)
 * Pass ATOMIC_OPS_LIBS to tests using AO primitives directly (Automake)
+* Prevent requesting blocks past max_heapsize in GC_collect_or_expand
+* Print in-use heap statistic on heap growth
 * Print iteration number on thread creation or join failure in tests
+* Print objs_in_block as zero for large objects in GC_print_block_list
 * Print thread number on marker thread creation failure
 * Put gc_badalc/cpp.cpp instead of .cc ones in CMake script (MSVC/BCC/WCC)
+* Really ignore bad GC_INITIAL/MAXIMUM_HEAP_SIZE values
+* Reduce number of iterations in disclaim and cpp tests
+* Refactoring of GC_n_set_marks and GC_print_block_descr
+* Refine column names output by GC_print_block_list
 * Relax required dependencies for atomicopstest (CMake)
 * Remove GC_copyright symbol
+* Remove GC_min/max() and simplify heap bounds update in expand_hp_inner
 * Remove IF_IA64 macro in pthread_stop_world (refactoring)
+* Remove STACK_GROWS_DOWN explicit definitions in gcconfig.h (refactoring)
 * Remove Symbian makefile
 * Remove ancient OS2_MAKEFILE, PCR-Makefile, SMakefile.amiga
+* Remove comment from gc_cpp.h about bugs in ancient compilers
 * Remove doc.am, and move gc.man to base folder (refactoring)
+* Remove duplication of random numbers generator formula (refactoring)
 * Remove msvc_dbg.h file (refactoring)
+* Remove obsolete AC_PROG_LIBTOOL in configure.ac (refactoring)
 * Remove redundant 'private' prefix in include directives in include/private
+* Remove specific DATASTART definition for ancient OpenBSD/m68k
+* Rename MAP_LEN internal macro to OBJ_MAP_LEN (refactoring)
 * Rename README.QUICK to LICENSE and install it by default
 * Rename README.rs6000 to README.aix
+* Reorder macro definitions for rare architectures in gcconfig.h
+* Replace init_netbsd_elf with init_linux_data_start on NetBSD (refactoring)
+* Replace obsolete AC_TRY_COMPILE/LINK/RUN in configure.ac (refactoring)
+* Return free memory to OS explicitly before getting new memory from OS
+* Roundup size passed to GC_expand_hp
 * State explicitly that license is MIT-style
 * Support CFLAGS_EXTRA in rare build scripts (NT/WCC_MAKEFILE, digimars.mak)
+* Support malloc redirection on E2K
+* Treat GC_arrays as a part of internal memory when printing its size
 * Try find libatomic_ops installed by cmake if with_libatomic_ops (CMake)
 * Use GC_printf in cpptest consistently (refactoring)
+* Warn if heap has grown while GC was disabled
 
 
 == [8.2.2] (not released yet) ==
