Update AUTHORS file (add Simon Kainz)

--- a/AUTHORS
+++ b/AUTHORS
@@ -390,6 +390,7 @@ Shawn Wagner <shawnw@speakeasy.org>
 Shea Levy <shea@shealevy.com>
 Shiro Kawai <shiro@lava.net>
 Simon Gornall <simon@gornall.net>
+Simon Kainz <simon@familiekainz.at>
 Simon Posnjak <simon.posnjak@siol.net>
 Slava Sysoltsev <Viatcheslav.Sysoltsev@h-d-gmbh.de>
 Sorawee Porncharoenwase <sorawee.pwase@gmail.com>
