--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2022-04-19  Ivan Maidanski <ivmai@mail.ru>
+
+	* cord/cordprnt.c (NONE): Fix a typo in comment ("non-numeric").
+
+2022-02-25  Ivan Maidanski <ivmai@mail.ru>
+
+	* allchblk.c [USE_MUNMAP] (GC_unmap_old): Remove duplicate "way" in
+	comment.
+
 2022-02-02  Ivan Maidanski <ivmai@mail.ru>
 
 	* os_dep.c [NEED_PROC_MAPS] (GC_get_maps): Do not return 0 from the
