--- a/AUTHORS
+++ b/AUTHORS
@@ -296,6 +296,7 @@ Matthias Drochner <M.Drochner@fz-juelich.de>
 Matthieu Herrb <matthieu@openbsd.org>
 Maurizio Vairani <maurizio.vairani@cloverinformatica.it>
 Max Mouratov <mmouratov@gmail.com>
+Maximilian Downey Twiss <creatorsmithmdt@gmail.com>
 Maya Rashish <coypu@sdf.org>
 Melissa O'Neill <oneill@cs.sfu.ca>
 Michael Arnoldus <chime@proinf.dk>
