--- a/AUTHORS
+++ b/AUTHORS
@@ -288,6 +288,7 @@ Matthias Andree <matthias.andree@gmx.de>
 Matthias Drochner <M.Drochner@fz-juelich.de>
 Maurizio Vairani <maurizio.vairani@cloverinformatica.it>
 Max Mouratov <mmouratov@gmail.com>
+Maximilian Downey Twiss <creatorsmithmdt@gmail.com>
 Melissa O'Neill <oneill@cs.sfu.ca>
 Michael Arnoldus <chime@proinf.dk>
 Michael DeRoy <deroymichael@gmail.com>
